made custom validation annotations